# GEN-AI-LLD

basic-rag-pipeline/: README.md  SUMMARY.md  pyproject.toml
basic-rag-pipeline/src/basic_rag_pipeline/: __init__.py  api.py  factory.py  interfaces.py  langchain_adapters.py  models.py
basic-rag-pipeline/tests/: test_rag_pipeline.py
chatbot-conversation-memory-system/: README.md  SUMMARY.md  pyproject.toml
chatbot-conversation-memory-system/src/chatbot_conversation_memory_system/: __init__.py  interfaces.py  memory.py  models.py
chatbot-conversation-memory-system/tests/: test_memory.py
function-calling-tool-use-handler/: README.md  SUMMARY.md  pyproject.toml
function-calling-tool-use-handler/src/function_calling_tool_use_handler/: __init__.py  errors.py  handler.py  models.py  tools.py
function-calling-tool-use-handler/tests/: test_handler.py
hallucination-detection-handling/: README.md  SUMMARY.md  pyproject.toml
hallucination-detection-handling/src/hallucination_detection_handling/: __init__.py  detectors.py  handler.py  interfaces.py  models.py
hallucination-detection-handling/tests/: test_hallucination.py
llm-api-streaming-responses/: README.md  SUMMARY.md  pyproject.toml
llm-api-streaming-responses/src/llm_api_streaming_responses/: api.py  interfaces.py  models.py  providers.py  service.py
llm-api-streaming-responses/tests/: test_streaming.py
llm-evaluation-pipeline-judge/: README.md  SUMMARY.md  pyproject.toml
llm-evaluation-pipeline-judge/src/llm_evaluation_pipeline_judge/: __init__.py  interfaces.py  judges.py  models.py  pipeline.py
llm-evaluation-pipeline-judge/tests/: test_pipeline.py
llm-output-guardrails-offtopic-pii/: README.md  SUMMARY.md  pyproject.toml
llm-output-guardrails-offtopic-pii/src/llm_output_guardrails_offtopic_pii/: __init__.py  checks.py  guardrails.py  interfaces.py  models.py
llm-output-guardrails-offtopic-pii/tests/: test_guardrails.py
llm-response-caching-layer/: README.md  SUMMARY.md  pyproject.toml
llm-response-caching-layer/src/llm_response_caching_layer/: __init__.py  cache.py  interfaces.py  models.py  service.py
llm-response-caching-layer/tests/: test_cache.py
multi-agent-collaboration-system/: README.md  SUMMARY.md  pyproject.toml
multi-agent-collaboration-system/src/multi_agent_collaboration_system/: __init__.py  agents.py  interfaces.py  models.py  orchestrator.py
multi-agent-collaboration-system/tests/: test_system.py
pdf-document-parser-chunker/: README.md  SUMMARY.md  pyproject.toml
pdf-document-parser-chunker/src/pdf_document_parser_chunker/: __init__.py  chunker.py  interfaces.py  models.py  parser.py  service.py
pdf-document-parser-chunker/tests/: test_service.py
prompt-injection-detection/: README.md  SUMMARY.md  pyproject.toml
prompt-injection-detection/src/prompt_injection_detection/: __init__.py  detector.py  handler.py  interfaces.py  models.py
prompt-injection-detection/tests/: test_injection_detection.py
prompt-template-variable-substitution/: README.md  SUMMARY.md  pyproject.toml
prompt-template-variable-substitution/src/prompt_template_variable_substitution/: __init__.py  errors.py  models.py  template_engine.py
prompt-template-variable-substitution/tests/: test_template_engine.py
retry-exponential-backoff-llm/: README.md  SUMMARY.md  pyproject.toml
retry-exponential-backoff-llm/src/retry_exponential_backoff_llm/: __init__.py  errors.py  models.py  retry.py
retry-exponential-backoff-llm/tests/: test_retry.py
semantic-caching-llm-queries/: README.md  SUMMARY.md  pyproject.toml
semantic-caching-llm-queries/src/semantic_caching_llm_queries/: __init__.py  cache.py  embeddings.py  interfaces.py  models.py  service.py
semantic-caching-llm-queries/tests/: test_semantic_cache.py
semantic-search-embeddings-cosine/: README.md  SUMMARY.md  pyproject.toml
semantic-search-embeddings-cosine/src/semantic_search_embeddings_cosine/: __init__.py  embeddings.py  index.py  interfaces.py  models.py  search.py
semantic-search-embeddings-cosine/tests/: test_semantic_search.py
simple-ai-agent-with-tool-use/: README.md  SUMMARY.md  pyproject.toml
simple-ai-agent-with-tool-use/src/simple_ai_agent_with_tool_use/: __init__.py  agent.py  factory.py  models.py  tools.py
simple-ai-agent-with-tool-use/tests/: test_agent.py
simple-prompt-versioning-system/: README.md  SUMMARY.md  pyproject.toml
simple-prompt-versioning-system/src/simple_prompt_versioning_system/: __init__.py  errors.py  models.py  service.py  store.py
simple-prompt-versioning-system/tests/: test_versioning.py
simple-search-reranker/: README.md  SUMMARY.md  pyproject.toml
simple-search-reranker/src/simple_search_reranker/: __init__.py  interfaces.py  models.py  reranker.py
simple-search-reranker/tests/: test_reranker.py
text-chunking-strategies/: README.md  SUMMARY.md  pyproject.toml
text-chunking-strategies/src/text_chunking_strategies/: __init__.py  fixed_size.py  interfaces.py  langchain_adapter.py  models.py  recursive.py  semantic.py
text-chunking-strategies/tests/: test_chunkers.py
token-counting-context-window/: README.md  SUMMARY.md  pyproject.toml
token-counting-context-window/src/token_counting_context_window/: __init__.py  context_manager.py  interfaces.py  models.py  tokenizer.py
token-counting-context-window/tests/: test_context_manager.py
vector-metrics-from-scratch/: README.md  SUMMARY.md  pyproject.toml
vector-metrics-from-scratch/src/vector_metrics_from_scratch/: __init__.py  metrics.py
vector-metrics-from-scratch/tests/: test_metrics.py
vector-similarity-search-from-scratch/: README.md  SUMMARY.md  pyproject.toml
vector-similarity-search-from-scratch/src/vector_similarity_search_from_scratch/: __init__.py  errors.py  index.py  models.py  search.py  similarity.py
vector-similarity-search-from-scratch/tests/: test_search.py
