[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-document-parser-chunker"
version = "0.1.0"
description = "Interview-scale PDF text parser and chunker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pypdf>=4.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
