[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-search-embeddings-cosine"
version = "0.1.0"
description = "Interview-scale semantic search using embeddings and cosine similarity"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain-core>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
